--- a/figure_generation/figure_data_overview/notebooks/01_build_figure.ipynb
+++ b/figure_generation/figure_data_overview/notebooks/01_build_figure.ipynb
@@ -10,11 +10,123 @@
     "\n",
     "#### Purpose: Give readers enough information about the dataset as a glance to decide if it is of interest to them. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4ea53f83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import IPython.display as IPd\n",
+    "\n",
+    "import time\n",
+    "import sys\n",
+    "import os\n",
+    "from copy import deepcopy\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import time\n",
+    "import IPython.display as IPd\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pylab as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "def svg(img):\n",
+    "    IPd.display(IPd.HTML('{}\" / >'.format(img, time.time())))\n",
+    "\n",
+    "from svgutils.compose import *\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..', )))\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..', '..', '..',)))\n",
+    "from plot_code.config_plot_params import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "42e8659f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "../fig/fig_data_overview.svg\" / >"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "svg_scale = 1.25  # set this to 1.25 for Inkscape, 1.0 otherwise\n",
+    "\n",
+    "# Panel letters in Helvetica Neue, 12pt, Medium\n",
+    "kwargs_text = {'size': '20pt', 'font': 'Helvetica', 'weight': '800'}\n",
+    "\n",
+    "f = Figure(\"19cm\", \"21cm\",\n",
+    "        \n",
+    "    Panel(\n",
+    "        Image(2385, 1059, \"../svg/raster.png\").scale(0.29),\n",
+    "    ).move(0, 70),\n",
+    "\n",
+    "    Panel(\n",
+    "        Image(1948, 189, \"../svg/frames.png\").scale(0.314),\n",
+    "        Text(\"a\", -30, 3, **kwargs_text),\n",
+    "    ).move(40, 20),\n",
+    "\n",
+    "    Panel(\n",
+    "        SVG(\"../svg/localizations.svg\").scale(1.0),\n",
+    "        Text(\"b\", -15, 10, **kwargs_text),\n",
+    "    ).move(30, 375),\n",
+    "    \n",
+    "    Panel(\n",
+    "        SVG(\"../svg/units_by_region.svg\").scale(0.8),\n",
+    "        Text(\"c\", 10, 0, **kwargs_text),\n",
+    "    ).move(10, 578),\n",
+    "\n",
+    "    Panel(\n",
+    "        SVG(\"../svg/unit_distribution_across_patients.svg\").scale(0.8),\n",
+    "        Text(\"d\", -15, 10, **kwargs_text),\n",
+    "    ).move(235, 570),\n",
+    ")\n",
+    "\n",
+    "f.save(\"../fig/fig_data_overview.svg\")\n",
+    "svg(\"../fig/fig_data_overview.svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9c2e74d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dataset",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
