first draft annotation figure

--- a/figure_generation/figure_annotations_vis/notebooks/01_build_figure.ipynb
+++ b/figure_generation/figure_annotations_vis/notebooks/01_build_figure.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -69,11 +69,10 @@
     "kwargs_text = {'size': '12pt', 'font': 'Arial', 'weight': '800'}\n",
     "\n",
     "\n",
-    "f = Figure(\"15cm\", \"7cm\",\n",
-    "           \n",
+    "f = Figure(\"11cm\", \"6cm\",    \n",
     "      Panel(\n",
-    "          SVG(\"../svg/complete.svg\").scale(1.0),\n",
-    "    ).move(20, 20),\n",
+    "          SVG(\"../svg/annotations.svg\").scale(2.0),\n",
+    "    ).move(10, 10),\n",
     "           \n",
     ")\n",
     "\n",
