--- a/figure_generation/figure_annotations_vis/notebooks/01_build_figure.ipynb
+++ b/figure_generation/figure_annotations_vis/notebooks/01_build_figure.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -69,10 +69,18 @@
     "kwargs_text = {'size': '12pt', 'font': 'Arial', 'weight': '800'}\n",
     "\n",
     "\n",
-    "f = Figure(\"11cm\", \"6cm\",    \n",
-    "      Panel(\n",
+    "f = Figure(\"11cm\", \"4.2cm\",    \n",
+    "    Panel(\n",
     "          SVG(\"../svg/annotations.svg\").scale(2.0),\n",
     "    ).move(10, 10),\n",
+    "\n",
+    "    Panel(\n",
+    "          SVG(\"../svg/labels_indoor.svg\").scale(1.3),\n",
+    "    ).move(10, 110),\n",
+    "\n",
+    "    Panel(\n",
+    "          SVG(\"../svg/labels_outdoor.svg\").scale(1.3),\n",
+    "    ).move(270, 110),\n",
     "           \n",
     ")\n",
     "\n",
