updated decoding figure

--- a/figure_generation/figure_decoding_results/notebooks/01_build_figure.ipynb
+++ b/figure_generation/figure_decoding_results/notebooks/01_build_figure.ipynb
@@ -13,10 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "4ea53f83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded font name: Helvetica\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import IPython.display as IPd\n",
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "42e8659f",
    "metadata": {},
    "outputs": [
@@ -70,7 +78,7 @@
     "# Panel letters in Helvetica Neue, 12pt, Medium\n",
     "kwargs_text = {'size': '20pt', 'font': 'Helvetica', 'weight': '800'}\n",
     "\n",
-    "f = Figure(\"23cm\", \"16cm\",\n",
+    "f = Figure(\"23cm\", \"23cm\",\n",
     "        \n",
     "    Panel(\n",
     "        Image(950, 250, \"../svg/decoding.jpg\"),\n",
@@ -83,9 +91,14 @@
     "    ).move(20, 260),\n",
     "\n",
     "    Panel(\n",
-    "        Image(400, 400, \"../svg/buffer_lengths.jpg\"),\n",
-    "        Text(\"c\", 10, 50, **kwargs_text),\n",
-    "    ).move(450, 273),\n",
+    "        Image(400, 400, \"../svg/regional_differences_scenes.jpg\"),\n",
+    "        Text(\"c\", 10, 70, **kwargs_text),\n",
+    "    ).move(450, 260),\n",
+    "\n",
+    "    Panel(\n",
+    "        Image(950, 250, \"../svg/buffer_lengths.jpg\"),\n",
+    "        Text(\"d\", 70, -10, **kwargs_text),\n",
+    "    ).move(-40, 615),\n",
     ")\n",
     "\n",
     "f.save(\"../fig/fig_decoding.svg\")\n",
