changed regions in fig 1

--- a/figure_generation/figure_data_overview/notebooks/01_build_figure.ipynb
+++ b/figure_generation/figure_data_overview/notebooks/01_build_figure.ipynb
@@ -13,10 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4ea53f83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded font name: Helvetica\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import IPython.display as IPd\n",
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "42e8659f",
    "metadata": {},
    "outputs": [
@@ -73,28 +81,28 @@
     "f = Figure(\"19cm\", \"21cm\",\n",
     "        \n",
     "    Panel(\n",
-    "        Image(2385, 1059, \"../svg/raster.png\").scale(0.29),\n",
-    "    ).move(0, 70),\n",
+    "        SVG(\"../svg/raster.svg\").scale(1.0),\n",
+    "    ).move(0, 80),\n",
     "\n",
     "    Panel(\n",
-    "        Image(1948, 189, \"../svg/frames.png\").scale(0.314),\n",
-    "        Text(\"a\", -30, 3, **kwargs_text),\n",
-    "    ).move(40, 20),\n",
+    "        Image(1217, 189, \"../svg/frames.png\").scale(.52),\n",
+    "        Text(\"a\", -22, 20, **kwargs_text),\n",
+    "    ).move(40, 0),\n",
     "\n",
     "    Panel(\n",
     "        SVG(\"../svg/localizations.svg\").scale(1.0),\n",
-    "        Text(\"b\", -15, 10, **kwargs_text),\n",
-    "    ).move(30, 375),\n",
+    "        Text(\"b\", -27, 10, **kwargs_text),\n",
+    "    ).move(45, 375),\n",
     "    \n",
     "    Panel(\n",
     "        SVG(\"../svg/units_by_region.svg\").scale(0.8),\n",
-    "        Text(\"c\", 10, 0, **kwargs_text),\n",
-    "    ).move(10, 578),\n",
+    "        Text(\"c\", -8, 0, **kwargs_text),\n",
+    "    ).move(25, 578),\n",
     "\n",
     "    Panel(\n",
     "        SVG(\"../svg/unit_distribution_across_patients.svg\").scale(0.8),\n",
     "        Text(\"d\", -15, 10, **kwargs_text),\n",
-    "    ).move(235, 570),\n",
+    "    ).move(250, 570),\n",
     ")\n",
     "\n",
     "f.save(\"../fig/fig_data_overview.svg\")\n",
