setup wrapper for hd and dvd

--- a/movie_wrapper/checkout_wrapper.ipynb
+++ b/movie_wrapper/checkout_wrapper.ipynb
@@ -343,7 +343,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>left amygdala</td>\n",
-       "      <td>LA pynwb.ecephys.ElectrodeGroup at 0x138506951861520\\nFields:\\n  description: depth electrode AL (macro contact), AL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x138506951860512\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left amygdala\\n</td>\n",
+       "      <td>LA pynwb.ecephys.ElectrodeGroup at 0x124053631083792\\nFields:\\n  description: depth electrode AL (macro contact), AL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x124053631082784\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left amygdala\\n</td>\n",
        "      <td>LA</td>\n",
        "      <td>L</td>\n",
        "      <td>A</td>\n",
@@ -357,7 +357,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>left anterior hippocampus</td>\n",
-       "      <td>LAH pynwb.ecephys.ElectrodeGroup at 0x138506954931920\\nFields:\\n  description: depth electrode AHL (macro contact), AHL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x138506951860512\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left anterior hippocampus\\n</td>\n",
+       "      <td>LAH pynwb.ecephys.ElectrodeGroup at 0x124053634366864\\nFields:\\n  description: depth electrode AHL (macro contact), AHL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x124053631082784\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left anterior hippocampus\\n</td>\n",
        "      <td>LAH</td>\n",
        "      <td>L</td>\n",
        "      <td>AH</td>\n",
@@ -371,7 +371,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>left anterior hippocampus</td>\n",
-       "      <td>LAH pynwb.ecephys.ElectrodeGroup at 0x138506954931920\\nFields:\\n  description: depth electrode AHL (macro contact), AHL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x138506951860512\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left anterior hippocampus\\n</td>\n",
+       "      <td>LAH pynwb.ecephys.ElectrodeGroup at 0x124053634366864\\nFields:\\n  description: depth electrode AHL (macro contact), AHL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x124053631082784\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left anterior hippocampus\\n</td>\n",
        "      <td>LAH</td>\n",
        "      <td>L</td>\n",
        "      <td>AH</td>\n",
@@ -385,7 +385,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>left anterior hippocampus</td>\n",
-       "      <td>LAH pynwb.ecephys.ElectrodeGroup at 0x138506954931920\\nFields:\\n  description: depth electrode AHL (macro contact), AHL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x138506951860512\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left anterior hippocampus\\n</td>\n",
+       "      <td>LAH pynwb.ecephys.ElectrodeGroup at 0x124053634366864\\nFields:\\n  description: depth electrode AHL (macro contact), AHL manual review\\n  device: NeuraLynx ATLAS pynwb.device.Device at 0x124053631082784\\nFields:\\n  description: Acquisition amplifier\\n  manufacturer: NeuraLynx\\n\\n  location: left anterior hippocampus\\n</td>\n",
        "      <td>LAH</td>\n",
        "      <td>L</td>\n",
        "      <td>AH</td>\n",
@@ -489,7 +489,7 @@
        "</table><p>... and 36 more rows.</p></details></details><div style=\"margin-left: 0px;\" class=\"container-fields\"><span class=\"field-key\" title=\".experiment_description\">experiment_description: </span><span class=\"field-value\">Single-neuron data recorded from Behnke-Fried microwires implanted in the human medial temporal lobe during the presentation of a full-length movie (500 Days of Summer). This file also includes over 50 annotations of movie content.</span></div><div style=\"margin-left: 0px;\" class=\"container-fields\"><span class=\"field-key\" title=\".session_id\">session_id: </span><span class=\"field-value\">sub_1</span></div><div style=\"margin-left: 0px;\" class=\"container-fields\"><span class=\"field-key\" title=\".lab\">lab: </span><span class=\"field-value\">Mormann Lab at Universitätsklinikum Bonn (University Medical Center of Bonn)</span></div><div style=\"margin-left: 0px;\" class=\"container-fields\"><span class=\"field-key\" title=\".institution\">institution: </span><span class=\"field-value\">Universitätsklinikum Bonn (University Medical Center of Bonn)</span></div></div>"
       ],
       "text/plain": [
-       "root pynwb.file.NWBFile at 0x138506951862864\n",
+       "root pynwb.file.NWBFile at 0x124053631085136\n",
        "Fields:\n",
        "  devices: {\n",
        "    NeuraLynx ATLAS <class 'pynwb.device.Device'>\n",
@@ -523,7 +523,7 @@
        "    movie_binning_info <class 'hdmf.common.table.DynamicTable'>,\n",
        "    raw_watchlogs <class 'hdmf.common.table.DynamicTable'>\n",
        "  }\n",
-       "  subject: subject pynwb.file.Subject at 0x138506951861184\n",
+       "  subject: subject pynwb.file.Subject at 0x124053631083456\n",
        "Fields:\n",
        "  age: 54\n",
        "  age__reference: birth\n",
@@ -595,8 +595,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e6e5cadb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: 93403\n",
+      "Output: 93441\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = 93403\n",
+    "out = wrapper.wrapper_hd(input)\n",
+    "print(f\"Input: {input}\")\n",
+    "print(f\"Output: {out}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "614d4bde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06d32803",
    "metadata": {},
    "outputs": [],
    "source": []
