responsive su plot: redid

--- a/figure_generation/figure_responsive_units/notebooks/01_build_figure.ipynb
+++ b/figure_generation/figure_responsive_units/notebooks/01_build_figure.ipynb
@@ -5,15 +5,12 @@
    "id": "c668a3b1",
    "metadata": {},
    "source": [
-    "# fig 1: dataset and stimulus overview\n",
-    "\n",
-    "\n",
-    "#### Purpose: Give readers enough information about the dataset as a glance to decide if it is of interest to them. \n"
+    "# fig: responsive units\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4ea53f83",
    "metadata": {},
    "outputs": [
@@ -55,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "42e8659f",
    "metadata": {},
    "outputs": [
@@ -78,40 +75,32 @@
     "# Panel letters in Helvetica Neue, 12pt, Medium\n",
     "kwargs_text = {'size': '20pt', 'font': 'Helvetica', 'weight': '800'}\n",
     "\n",
-    "f = Figure(\"19cm\", \"9cm\",\n",
+    "f = Figure(\"23cm\", \"9.5cm\",\n",
     "        \n",
     "    Panel(\n",
     "        SVG(\"../svg/camera-cuts_pat68_unit82_PHC_key1.svg\").scale(0.4),\n",
-    "        Text(\"a\", 5, 20, **kwargs_text),\n",
+    "        Text(\"a\", 5, 30, **kwargs_text),\n",
     "    ).move(0, 0),\n",
     "\n",
     "    Panel(\n",
-    "        SVG(\"../svg/indoor-setting_pat42_unit30_PHC_key0.svg\").scale(0.4),\n",
+    "        SVG(\"../svg/camera-cuts_pat68_unit33_PHC_key1.svg\").scale(0.4),\n",
     "        #Text(\"\", 5, 15, **kwargs_text),\n",
-    "    ).move(170, 0),\n",
+    "    ).move(220, 0),\n",
     "\n",
     "    Panel(\n",
-    "        SVG(\"../svg/summer_pat33_unit13_A_key1.svg\").scale(0.4),\n",
+    "        SVG(\"../svg/camera-cuts_pat31_unit53_PHC_key1.svg\").scale(0.4),\n",
     "        #Text(\"\", 5, 15, **kwargs_text),\n",
-    "    ).move(305, 0),\n",
+    "    ).move(395, 0),\n",
     "\n",
     "    Panel(\n",
     "        SVG(\"../svg/camera-cuts_PHC_key1.svg\").scale(0.4),\n",
-    "        Text(\"b\", 0, 20, **kwargs_text),\n",
-    "    ).move(465, 0),\n",
+    "        Text(\"b\", 0, 30, **kwargs_text),\n",
+    "    ).move(580, 0),\n",
     ")\n",
     "\n",
     "f.save(\"../fig/fig_responsive_units.svg\")\n",
     "svg(\"../fig/fig_responsive_units.svg\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9c2e74d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
