--- a/figure_generation/figure_annotations_vis/notebooks/01_build_figure.ipynb
+++ b/figure_generation/figure_annotations_vis/notebooks/01_build_figure.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -69,18 +69,18 @@
     "kwargs_text = {'size': '12pt', 'font': 'Arial', 'weight': '800'}\n",
     "\n",
     "\n",
-    "f = Figure(\"11cm\", \"4.5cm\",    \n",
+    "f = Figure(\"14.3cm\", \"3.6cm\",    \n",
     "    Panel(\n",
     "          SVG(\"../svg/annotations.svg\").scale(2.0),\n",
     "    ).move(10, 10),\n",
     "\n",
     "    Panel(\n",
-    "          SVG(\"../svg/labels_indoor.svg\").scale(1.4),\n",
-    "    ).move(10, 110),\n",
+    "          SVG(\"../svg/labels_indoor_new.svg\").scale(1.4),\n",
+    "    ).move(40, 105),\n",
     "\n",
     "    Panel(\n",
-    "          SVG(\"../svg/labels_outdoor.svg\").scale(1.4),\n",
-    "    ).move(270, 110),\n",
+    "          SVG(\"../svg/labels_outdoor_new.svg\").scale(1.4),\n",
+    "    ).move(300, 106),\n",
     "           \n",
     ")\n",
     "\n",
